--- a/ViewsModule/ViewsModule.csproj
+++ b/ViewsModule/ViewsModule.csproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <Compile Include="Messages\StateChangeMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\SystemStateViewModel.cs" />
     <Compile Include="ViewsModule.Module.cs" />
     <Compile Include="View\AlarmAreaView.xaml.cs">
       <DependentUpon>AlarmAreaView.xaml</DependentUpon>
@@ -160,7 +161,7 @@
     <Resource Include="Assets\ViziLogo.JPG" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ViewModels\" />
+    <Folder Include="Controls\" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\Props\CameraFeed.png" />
